Add describeMixin helper

--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -11,6 +11,7 @@
   <script type="text/javascript" src="../vendor/es5-sham.min.js"></script>
   <script type="text/javascript" src="../vendor/es5-shim.min.js"></script>
   <script type="text/javascript" src="../vendor/require.js"></script>
+  <script type="text/javascript" src="require_config.js"></script>
 
   <script type="text/javascript" src="../lib/jasmine-flight.js"></script>
   <script type="text/javascript" src="jasmine-flight-spec.js"></script>
